--- a/skins/editorial/styles/styles.css
+++ b/skins/editorial/styles/styles.css
@@ -7107,12 +7107,13 @@ a.button.icon.back-sidebar-button.folders {
   font-weight: 400;
 }
 .folderlist li a,
-#mailbox-list li a,
 .treelist.listing li a {
   font-family: 'Source Sans 3', sans-serif;
   font-size: 13px;
   padding: 6px 10px !important;
   color: #f5f5f5 !important;
+  line-height: normal !important;
+  border-left: 2px solid transparent !important;
   transition: background 0.1s;
 }
 .treelist.listing li > a:before {
@@ -7121,6 +7122,31 @@ a.button.icon.back-sidebar-button.folders {
   margin-right: 7px !important;
   width: 1.2em !important;
   text-align: center;
+}
+.listing li.virtual > a {
+  opacity: 1 !important;
+}
+ul.treelist li div.treetoggle {
+  position: absolute !important;
+  top: 0 !important;
+  left: 2px !important;
+  width: 18px !important;
+  height: 100% !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  color: #55556a !important;
+  cursor: pointer;
+  margin: 0 !important;
+  padding: 0 !important;
+  background-color: transparent !important;
+}
+ul.treelist li div.treetoggle:before {
+  margin: 0 !important;
+  font-size: 10px !important;
+}
+.treelist.listing li:has(> div.treetoggle) > a {
+  padding-left: 22px !important;
 }
 .treelist.listing li.selected > a,
 .folderlist li.mailbox.selected > a {
@@ -7141,14 +7167,23 @@ a.button.icon.back-sidebar-button.folders {
 .treelist.listing ul li > a {
   padding-left: 26px !important;
 }
+.treelist.listing ul li:has(> div.treetoggle) > a {
+  padding-left: 38px !important;
+}
+.treelist.listing ul li > div.treetoggle {
+  left: 18px !important;
+}
 .treelist.listing ul ul li > a {
   padding-left: 42px !important;
 }
+.treelist.listing ul ul li:has(> div.treetoggle) > a {
+  padding-left: 54px !important;
+}
+.treelist.listing ul ul li > div.treetoggle {
+  left: 34px !important;
+}
 .treelist.listing ul ul ul li > a {
   padding-left: 58px !important;
-}
-.treetoggle {
-  color: #55556a !important;
 }
 .folderlist li.mailbox .unreadcount {
   background-color: #5b9bd5 !important;
@@ -7450,7 +7485,7 @@ a.button.icon.back-sidebar-button.folders {
   color: #3a3a4a !important;
 }
 #messagelist span.flag:before {
-  content: "\e17c" !important;
+  content: "\e176" !important;
   font-size: 13px !important;
 }
 #messagelist tr.flagged span.flag {
